--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
     <a href="http://railstutorial.org/">北京计量院专家信息系统</a>
   </h2>
 
-  <%= link_to "马上注册!", '#', class: "btn btn-large btn-primary" %>
+  <%= link_to "马上注册!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
