创建用户模型，添加用户密码加密功能

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,12 @@
 <footer class="footer">
   <small>
-    <a href="http://railstutorial.org/">Rails Tutorial</a>
-    by Michael Hartl
+    <a href="http://www.bjjl.cn/">北京计量院</a>
   </small>
   <nav>
     <ul>
       <li><%= link_to "关于",   about_path %></li>
       <li><%= link_to "联系我们", contact_path %></li>
-      <li><a href="http://news.railstutorial.org/">新闻</a></li>
+      <li><a href="http://www.bjjl.cn/">新闻</a></li>
     </ul>
   </nav>
 </footer>
