--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,11 @@
 <% provide(:title, '联系我们') %>
-<h1>Contact</h1>
+<h1>联系我们</h1>
 <p>
-  Contact Ruby on Rails Tutorial about the sample app at the
-  <a href="http://railstutorial.org/contact">contact page</a>.
+北京市计量检测科学研究院 
+</br>
+地址：北京市朝阳区安苑东里1区12号、14号 
+</br>
+组织机构代码：40059120-9
+</br>   
+联系电话：010-64916385 传真：010-64917174
 </p>
