--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,13 @@
-<div class="center hero-unit">
-  <h1>北京计量院专家信息系统</h1>
+ <div class="center hero-unit">
+    <h1>欢迎来到北京计量院</h1>
 
-  <h2>
-    This is the home page for the
-    <a href="http://railstutorial.org/">北京计量院专家信息系统</a>
-  </h2>
+    <h2>
+      <a href="http://www.bjjl.cn/zhuyet.asp?zyname=zhuyet">华北国家计量测试中心 </a>
+      
+    </h2>
 
-  <%= link_to "马上注册!", signup_path, class: "btn btn-large btn-primary" %>
-</div>
+    <%= link_to "现在注册!", signup_path, 
+                                class: "btn btn-large btn-primary" %>
+  </div>
 
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+  <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
