--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
-<header class="navbar navbar-fixed-top">
+<header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "专家信息系统", root_path, id: "logo" %>
+      <%= link_to "专家信息管理系统", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "主页", root_path %></li>
