--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,5 @@
-<% provide(:title, 'About Us') %>
-<h1>About Us</h1>
+<% provide(:title, '关于') %>
+<h1>关于</h1>
 <p>
-  The <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  is a project to make a book and screencasts to teach web development
-  with <a href="http://rubyonrails.org/">Ruby on Rails</a>. This
-  is the sample application for the tutorial.
+  本系统由北京计量院和北京工业大学联合开发，用于专家信息管理与统计。
 </p>
